[package]
name = "openidconnect"
version = "0.1.0"
authors = ["Luke Hinds <lhinds@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openidconnect = "1.1.1"
url = "2.2.1"
env_logger = "0.8.3"
reqwest = "0.11.2"
open = "1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
