[package]
name = "openidconnect"
version = "0.1.0"
authors = ["Luke Hinds <lhinds@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openidconnect = "1.1.1"
url = "2.2.1"
env_logger = "0.8.3"
reqwest = "0.11.2"
open = "1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13.0"
ecdsa = { version = "0.12.4", features = ["verify", "pem", "der", "pkcs8"] }
p256 = {version = "0.9.0", features = ["ecdsa-core"]}
